--- a/views/cubeism_template.html
+++ b/views/cubeism_template.html
@@ -160,7 +160,8 @@ var metrics = [
     'Scheme',
     'OCaml',
     'Mathematica',
-    'LiveScript'
+    'LiveScript',
+    'F#'
 ]
 /*
 var metrics = [
